syntax = "proto3";


option java_multiple_files = true;


package grpcopaproto;


service HttpRequest {

  rpc AuthzService (Request) returns (Reply) {}

}

message Request {
  bytes HttpRaw = 1;
}

message Reply {
  string message = 1;
}
